fix terms link text align - add join now page

--- a/assets/css/hoangminhtu_css/menu.css
+++ b/assets/css/hoangminhtu_css/menu.css
@@ -734,6 +734,7 @@ ul {
     .term-link {
         padding: 0 24px;
         margin: 0;
+        text-align: center;
     }
 
     .term-link > .item-link{
